done some minor changes in response of /api/v2/url route
